php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50791 Bad logic in defining fopencookie emulation
Submitted: 2010-01-18 12:57 UTC Modified: 2010-01-19 13:44 UTC
From: martin dot eisengardt at fiducia dot de Assigned: jani (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.3.1 OS: Win64-Cygwin
Private report: No CVE-ID: None
 [2010-01-18 12:57 UTC] martin dot eisengardt at fiducia dot de
Description:
------------
main/streams/cast.c line 32
The comment says "Under BSD, emulate fopencookie using funopen"

However under my gcywin both compiler options are set: HAVE_FUNOPEN and HAVE_FOPENCOOKIE. Of course compilation failes because of duplicate definitions.

Changing the preprocessor directive in line 33 solves the problem for me:
- #if HAVE_FUNOPEN
+ #if HAVE_FUNOPEN && !HAVE_FOPENCOOKIE

It compiles fine now and my scripts were successful. I did no "make test" to verify the change.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-01-19 13:44 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=293732
Log: - Fixed bug #50791 (Compile failure: Bad logic in defining fopencookie emulation)
 [2010-01-19 13:44 UTC] jani@php.net
Fixed properly now. (I hope :)
 [2010-02-03 20:49 UTC] svn@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&revision=294462
Log: - Fixed bug #50791 (Compile failure: Bad logic in defining fopencookie emulation
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 08:00:02 2026 UTC