- Fixed bug #50791 (Compile failure: Bad logic in defining fopencookie emulation)